@@ -203,29 +203,6 @@ Datum sfcgal_orientation(PG_FUNCTION_ARGS)
 	PG_RETURN_INT32(result);
 }
 
-PG_FUNCTION_INFO_V1(sfcgal_distance3D);
-Datum sfcgal_distance3D(PG_FUNCTION_ARGS)
-{
-	GSERIALIZED *input0, *input1;
-	sfcgal_geometry_t *geom0, *geom1;
-	double result;
-
-	sfcgal_postgis_init();
-
-	input0 = PG_GETARG_GSERIALIZED_P(0);
-	input1 = PG_GETARG_GSERIALIZED_P(1);
-	geom0 = POSTGIS2SFCGALGeometry(input0);
-	PG_FREE_IF_COPY(input0, 0);
-	geom1 = POSTGIS2SFCGALGeometry(input1);
-	PG_FREE_IF_COPY(input1, 1);
-
-	result = sfcgal_geometry_distance_3d(geom0, geom1);
-	sfcgal_geometry_delete(geom0);
-	sfcgal_geometry_delete(geom1);
-
-	PG_RETURN_FLOAT8(result);
-}
-
 PG_FUNCTION_INFO_V1(sfcgal_tesselate);
 Datum sfcgal_tesselate(PG_FUNCTION_ARGS)
 {
